style: changes rest struct names
