# application/rest/model.go
@@ -8,10 +8,14 @@ type Base struct {
 	UpdatedAt time.Time `json:"updated_at,omitempty" time_format:"RFC3339"`
 }
 
-type TimeRecordRequest struct {
+type RegisterTimeRecordRequest struct {
 	EmployeeID  string    `json:"employee_id,omitempty" binding:"required,uuid"`
 	Time        time.Time `json:"time,omitempty" time_format:"RFC3339" binding:"required"`
 	Description string    `json:"description,omitempty"`
+}
+
+type RegisterTimeRecordResponse struct {
+	ID string `json:"id" binding:"uuid"`
 }
 
 type TimeRecord struct {
@@ -25,6 +29,7 @@ type TimeRecord struct {
 	EmployeeID    string    `json:"employee_id,omitempty"`
 	ApprovedBy    string    `json:"approved_by,omitempty"`
 	RefusedBy     string    `json:"refused_by,omitempty"`
+	CreatedBy     string    `json:"created_by,omitempty"`
 }
 
 type HTTPResponse struct {
@@ -37,15 +42,23 @@ type HTTPError struct {
 	Error string `json:"error,omitempty" example:"status bad request"`
 }
 
-type ID struct {
+type ApproveTimeRecordRequest struct {
 	ID string `uri:"id" binding:"required,uuid"`
 }
 
-type RefuseRequest struct {
+type FindTimeRecordRequest struct {
+	ID string `uri:"id" binding:"required,uuid"`
+}
+
+type IDRequest struct {
+	ID string `uri:"id" binding:"required,uuid"`
+}
+
+type RefuseTimeRecordRequest struct {
 	RefusedReason string `json:"refused_reason" binding:"required"`
 }
 
-type TimeRecordsRequest struct {
+type SearchTimeRecordRequest struct {
 	EmployeeID string    `json:"employee_id,omitempty" form:"employee_id" binding:"required,uuid"`
 	FromDate   time.Time `json:"from_date" form:"from_date" binding:"required"`
 	ToDate     time.Time `json:"to_date" form:"to_date" binding:"required"`
